--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,110 +10,108 @@
   </div>
 </section>
 
+<section class="app-marketing">
+  <div class="row">
+    <div class="col-lg-12 col-md-12">
+      <img
+        class="app-marketing"
+        src="https://oneappwebsite.firebaseapp.com/assets/images/marketing-board.png"
+      />
 
 
 
 
-
-
-
-
+    </div>
+  </div>
+</section>
 
 <!--Business Section-->
 
 <section class="business">
-
-
   <div class="container">
-      <h2 class="business-heading">One App Ideas For Any Business Type</h2>
+    <h2 class="business-heading">One App Ideas For Any Business Type</h2>
     <div class="row text-center">
-
       <!--Gym App-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
         <h2>Gym App Website To App</h2>
         <a [routerLink]="['app-gym']">
-          
-          <img class="img-fluid img-shadow img-fix-padding"
+          <img
+            class="img-fluid img-shadow img-fix-padding"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543481658_1543481658_Fotolia_59212345_Subscription_Monthly_XXL.jpg"
         /></a>
       </div>
-
 
       <!--Car Mechanic-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
         <h2>Car Mechanic Website To App</h2>
 
-        <a [routerLink]="['app-car-mechanic']"><img class="img-fluid"
-          ><img
+        <a [routerLink]="['app-car-mechanic']"
+          ><img class="img-fluid"/><img
             class="img-fluid img-shadow"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543428779_1543428779_Fotolia_106760351_Subscription_Monthly_XXL.jpg"
         /></a>
       </div>
 
-
       <!--Night Club-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
         <h2>Nightclub Website To App</h2>
-        <a [routerLink]="['app-club']"> <img
-          class="img-fluid img-shadow"
-          src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542908570_1542908570_Fotolia_92828012_Subscription_Monthly_XL.jpg"
+        <a [routerLink]="['app-club']">
+          <img
+            class="img-fluid img-shadow"
+            src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542908570_1542908570_Fotolia_92828012_Subscription_Monthly_XL.jpg"
         /></a>
       </div>
-
 
       <!--Dentist-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
         <h2>Dentist Website To app</h2>
         <a [routerLink]="['app-dentist']">
-        <img
-          class="img-fluid img-shadow img-fix-padding"
-          src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543271774_1543271774_Fotolia_83538473_Subscription_Monthly_XXL.jpg"
+          <img
+            class="img-fluid img-shadow img-fix-padding"
+            src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543271774_1543271774_Fotolia_83538473_Subscription_Monthly_XXL.jpg"
         /></a>
       </div>
     </div>
     <!-- row-- -->
 
-
     <div class="row text-center">
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-          <h2>Hair Salon Website To App</h2>
-          <a [routerLink]="['app-salon']">
-            <img
-              class="img-fluid img-shadow"
-              src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542567157_1542567157_Fotolia_127254150_Subscription_Monthly_XXL.jpg"
-              /></a>
-            </div>
-  
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-          <h2>Coffee Shop Website To App</h2>
-  
-          <a [routerLink]="['app-cofeeshop']">
-            <img
-              class="img-fluid img-shadow"
-              src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542478238_1542478238_Fotolia_113898765_Subscription_Monthly_XXL.jpg"
-          /></a>
-        </div>
-  
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-          <h2>Vets Website To App</h2>
-          <a [routerLink]="['app-vets']">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <h2>Hair Salon Website To App</h2>
+        <a [routerLink]="['app-salon']">
+          <img
+            class="img-fluid img-shadow"
+            src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542567157_1542567157_Fotolia_127254150_Subscription_Monthly_XXL.jpg"
+        /></a>
+      </div>
+
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <h2>Coffee Shop Website To App</h2>
+
+        <a [routerLink]="['app-cofeeshop']">
+          <img
+            class="img-fluid img-shadow"
+            src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542478238_1542478238_Fotolia_113898765_Subscription_Monthly_XXL.jpg"
+        /></a>
+      </div>
+
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <h2>Vets Website To App</h2>
+        <a [routerLink]="['app-vets']">
           <img
             class="img-fluid img-shadow img-fix-padding"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543016047_1543016047_107404547_-_5760x3840.jpg"
-          /></a>
-        </div>
-  
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-          <h2>Schools Website To app</h2>
-          <a [routerLink]="['app-schools']">
+        /></a>
+      </div>
+
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <h2>Schools Website To app</h2>
+        <a [routerLink]="['app-schools']">
           <img
             class="img-fluid img-shadow img-fix-image"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543665523_1543665523_Education_school_class_pupils_and_students_in_library_%286%29.jpg"
-          /></a>
-        </div>
+        /></a>
       </div>
-
-
+    </div>
   </div>
   <!-- container -->
 </section>
@@ -122,10 +120,8 @@
 <!-- marketing-tips -->
 
 <section class="marketing-tips">
-
-
   <div class="container">
-      <h2 class="marketing-heading">One App Marketing Tips</h2>
+    <h2 class="marketing-heading">One App Marketing Tips</h2>
     <div class="row">
       <div class="col-md-3">
         <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
