fixed business section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,11 +29,11 @@
 
 <section class="business">
   <div class="container">
-    <h2 class="business-heading">One App Ideas For Any Business Type</h2>
+    <h2 class="idea-heading">One App Ideas For Any Business Type</h2>
     <div class="row text-center">
       <!--Gym App-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Gym App Website To App</h2>
+        <h2 class="business-caption">Gym App Website To App</h2>
         <a [routerLink]="['app-gym']">
           <img
             class="img-fluid img-shadow img-fix-padding"
@@ -43,7 +43,7 @@
 
       <!--Car Mechanic-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Car Mechanic Website To App</h2>
+        <h2 class="business-caption">Car Mechanic Website To App</h2>
 
         <a [routerLink]="['app-car-mechanic']"
           ><img class="img-fluid"/><img
@@ -54,7 +54,7 @@
 
       <!--Night Club-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Nightclub Website To App</h2>
+        <h2 class="business-caption">Nightclub Website To App</h2>
         <a [routerLink]="['app-club']">
           <img
             class="img-fluid img-shadow"
@@ -64,7 +64,7 @@
 
       <!--Dentist-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Dentist Website To app</h2>
+        <h2 class="business-caption">Dentist Website To app</h2>
         <a [routerLink]="['app-dentist']">
           <img
             class="img-fluid img-shadow img-fix-padding"
@@ -76,7 +76,7 @@
 
     <div class="row text-center">
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Hair Salon Website To App</h2>
+        <h2 class="business-caption">Hair Salon Website To App</h2>
         <a [routerLink]="['app-salon']">
           <img
             class="img-fluid img-shadow"
@@ -85,7 +85,7 @@
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Coffee Shop Website To App</h2>
+        <h2 class="business-caption">Coffee Shop Website To App</h2>
 
         <a [routerLink]="['app-cofeeshop']">
           <img
@@ -95,7 +95,7 @@
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Vets Website To App</h2>
+        <h2 class="business-caption">Vets Website To App</h2>
         <a [routerLink]="['app-vets']">
           <img
             class="img-fluid img-shadow img-fix-padding"
@@ -104,7 +104,7 @@
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2>Schools Website To app</h2>
+        <h2 class="business-caption">Schools Website To app</h2>
         <a [routerLink]="['app-schools']">
           <img
             class="img-fluid img-shadow img-fix-image"
