--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -14,6 +14,7 @@ p{
 
 h2{
     font-family: 'Montserrat', sans-serif;
+    font-size:30px;
 
 }
 
@@ -48,14 +49,23 @@ width:60%;
 display:block;
 margin: 0 auto;
 
+}
 
+/*Idea Heading*/
+h2.idea-heading{
+padding-bottom:30px;
+font-size: 50px!important;
+line-height:60px;
+text-align:center;
+color:#2fab8b;
+font-weight:900;
 
 
 }
 
 /*Business Section*/
 section.business{
-padding-top:0px;
+padding-top:50px;
 padding-bottom:50px;
 height:auto;
 padding-left:3%;
@@ -63,40 +73,26 @@ background-color: #EDF2FB;
     }
 
 
-    section.business{
-padding-top:50px!important;
-background-color:#EDF2FB;
-padding-left:5%;
 
-    }
-
-
-    section.business h2{
-        font-family: 'Oswald', sans-serif!important; 
-       /* width:175px; */
+    .business-caption {
         font-size: 20px!important;
-        line-height:30px;
-        padding-bottom:15px;
-        color:#000!important;
-        padding-top:30px;
-        font-weight:bold;
-       text-transform: uppercase;
-       margin:0 auto;
-       padding-bottom:20px;
-       font-weight:900!important;
-    }
-    .business-heading h2 {
+        line-height:35px;
     font-family: 'Oswald', sans-serif!important;
-    width:50%;
-    font-size:30px!important;
+    /* width:50%; */
+    /* font-size:35px!important; */
     padding-top:5%;padding-left:10%;
+   
 }
-
+/*Box shadow around cols*/
 img.img-shadow{
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   
 }
+
+
+
+
 
 
 /*Marketing-tips*/
@@ -141,17 +137,31 @@ height:175px;
 
 /*Responsive*/
 
+@media (min-width: 1200px) {
+    
+
+
+
+
+
+}
+
 @media (max-width: 1200px) {
+    
+    h2.idea-heading {
+        font-size: 35px!important;
+        margin:0;
+        padding-bottom:30px;
+    }
 
-
-    section.business h2{
-  font-size:17px!important;
-
-
+    h2.business-caption {
+        width:100%;
+        /* padding-bottom: 15px!important; */
+        font-size: 22px!important;
     }
 
 img.img-fix-padding{
-    margin-top:0px;
+    /* margin-top:30px; */
 
 }
 
@@ -163,8 +173,19 @@ img.img-fix-padding{
 
 }
 
+/*Tablet Responsive*/
 @media (max-width: 980px) {
+    
+    h2.idea-heading {
+        font-size: 35px!important;
+        margin:0;
+        padding:0;
+    }
 
+    h2.business-caption {
+        padding-bottom: 30px!important;
+        font-size: 30px!important;
+    }
 
     img.img-fix-image{
        width:100%;
@@ -172,12 +193,7 @@ img.img-fix-padding{
         
         }
 
-        section.business h2{
-            font-size:28px!important;
-            line-height:35px;
-          
-          
-              }
+        
 
 }
 
@@ -190,17 +206,18 @@ img.img-fix-padding{
 
     }
 
-    section.business h2{
-   text-align:center;
-   font-size:22px!important;
-   font-weight:900!important;
+    h2.idea-heading {
+        font-size: 26px!important;
+        margin:0;
+        padding-bottom:15px;
     }
 
-    h2.business-heading{
-     font-size:35px!important;
-     font-weight:bold;
-     padding:0!important;
+    h2.business-caption {
+        padding-bottom: 20px!important;
+        font-size: 30px!important;
     }
+
+
 
 /*Marketing tips*/
 h2.marketing-heading {
@@ -225,17 +242,29 @@ h2.marketing-heading {
 }
 
 @media (max-width: 600px) {
-
+    h2.idea-heading {
+        font-size: 35px!important;
+        margin:0;
+        padding-bottom:30px;
+    }
 
 }
 
 
 @media (max-width: 480px) {
-
+    h2.idea-heading {
+        font-size: 35px!important;
+        margin:0;
+        padding-bottom:30px;
+    }
 
 }
 
 @media (max-width: 375px) {
-
+    h2.idea-heading {
+        font-size: 35px!important;
+        margin:0;
+        padding-bottom:30px;
+    }
 
 }
