--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,7 +29,7 @@
 
 <section class="business">
   <div class="container">
-    <h2 class="idea-heading">One App Ideas For Any Business Type</h2>
+    <h2 class="idea-heading">One Click App <br><span class="black">Your Business Will Never Be The Same</span></h2>
     <div class="row text-center">
       <!--Gym App-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
