changes app text

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
     <div class="row text-center">
       <!--Gym App-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Gym App Website To App</h2>
+        <h2 class="business-caption">Gym Website To App</h2>
         <a [routerLink]="['app-gym']">
           <img
             class="img-fluid img-shadow img-fix-padding"
@@ -64,7 +64,7 @@
 
       <!--Dentist-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Dentist Website To app</h2>
+        <h2 class="business-caption">Dentist Website To App</h2>
         <a [routerLink]="['app-dentist']">
           <img
             class="img-fluid img-shadow img-fix-padding"
@@ -104,7 +104,7 @@
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Schools Website To app</h2>
+        <h2 class="business-caption">Schools Website To App</h2>
         <a [routerLink]="['app-schools']">
           <img
             class="img-fluid img-shadow img-fix-image"
