gym heading changed

--- a/src/app/components/gym/gym.component.html
+++ b/src/app/components/gym/gym.component.html
@@ -10,7 +10,7 @@
         src="https://s3-us-west-2.amazonaws.com/xfunnels-builder/user-images/5bc3940a6b6fef12bbf1407e/1543403541_1543403541_Logo_web.png"
       />
 
-      <h2 class="top-website">Gym Website</h2>
+      <h2 class="top-website">Gym Website To App</h2>
     </div>
     <!-- logo -->
   </section>
