--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -121,7 +121,8 @@
 
 <section class="marketing-tips">
   <div class="container">
-    <h2 class="marketing-heading">One App Marketing Tips</h2>
+    <h2 class="marketing-heading">One App Tips</h2>
+    <h3 class="tips-text">Puts Your Business A Smartphone</h3>
     <div class="row">
       <div class="col-md-3">
         <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
