caption margin addded

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -74,42 +74,46 @@
     </div>
     <!-- row-- -->
 
-    <div class="row text-center">
+    <div class="row text-center pt-4">
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Hair Salon Website To App</h2>
+     
         <a [routerLink]="['app-salon']">
           <img
-            class="img-fluid img-shadow"
+            class="img-fluid img-shadow "
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542567157_1542567157_Fotolia_127254150_Subscription_Monthly_XXL.jpg"
         /></a>
+        <h2 class="business-caption">Hair Salon Website To App</h2>
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Coffee Shop Website To App</h2>
+       
 
         <a [routerLink]="['app-cofeeshop']">
           <img
             class="img-fluid img-shadow"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542478238_1542478238_Fotolia_113898765_Subscription_Monthly_XXL.jpg"
         /></a>
+        <h2 class="business-caption">Coffee Shop Website To App</h2>
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Vets Website To App</h2>
+      
         <a [routerLink]="['app-vets']">
           <img
             class="img-fluid img-shadow img-fix-padding"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543016047_1543016047_107404547_-_5760x3840.jpg"
         /></a>
+        <h2 class="business-caption">Vets Website To App</h2>
       </div>
 
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Schools Website To App</h2>
+        
         <a [routerLink]="['app-schools']">
           <img
             class="img-fluid img-shadow img-fix-image"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543665523_1543665523_Education_school_class_pupils_and_students_in_library_%286%29.jpg"
         /></a>
+        <h2 class="business-caption">Schools Website To App</h2>
       </div>
     </div>
   </div>
