--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,43 +33,47 @@
     <div class="row text-center">
       <!--Gym App-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Gym Website To App</h2>
+        
         <a [routerLink]="['app-gym']">
           <img
             class="img-fluid img-shadow img-fix-padding"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543481658_1543481658_Fotolia_59212345_Subscription_Monthly_XXL.jpg"
         /></a>
+        <h2 class="business-caption">Gym Website To App</h2>
       </div>
 
       <!--Car Mechanic-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Car Mechanic Website To App</h2>
+        
 
         <a [routerLink]="['app-car-mechanic']"
           ><img class="img-fluid"/><img
             class="img-fluid img-shadow"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543428779_1543428779_Fotolia_106760351_Subscription_Monthly_XXL.jpg"
         /></a>
+        <h2 class="business-caption">Car Mechanic Website To App</h2>
       </div>
 
       <!--Night Club-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Nightclub Website To App</h2>
+        
         <a [routerLink]="['app-club']">
           <img
             class="img-fluid img-shadow"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1542908570_1542908570_Fotolia_92828012_Subscription_Monthly_XL.jpg"
         /></a>
+        <h2 class="business-caption">Nightclub Website To App</h2>
       </div>
 
       <!--Dentist-->
       <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="business-caption">Dentist Website To App</h2>
+     
         <a [routerLink]="['app-dentist']">
           <img
             class="img-fluid img-shadow img-fix-padding"
             src="https://xfunnels-builder.s3.us-west-2.amazonaws.com/user-images/5bc3940a6b6fef12bbf1407e/1543271774_1543271774_Fotolia_83538473_Subscription_Monthly_XXL.jpg"
         /></a>
+        <h2 class="business-caption">Dentist Website To App</h2>
       </div>
     </div>
     <!-- row-- -->
@@ -126,7 +130,7 @@
 <section class="marketing-tips">
   <div class="container">
     <h2 class="marketing-heading">One App Tips</h2>
-    <h3 class="tips-text">Puts Your Business A Smartphone</h3>
+    <h3 class="tips-text">Puts Your Business On A Smartphone</h3>
     <div class="row">
       <div class="col-md-3">
         <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
