smartphone section added

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -133,7 +133,7 @@
     <h3 class="tips-text">Puts Your Business On A Smartphone</h3>
     <div class="row">
       <div class="col-md-3">
-        <h2>YOUR BUSINESS STORY</h2>
+        <h2>YOUR BUSINESS <br>STORY</h2>
         <a [routerLink]="['app-story']">
         <img
           class="img-fluid"
@@ -142,11 +142,12 @@
       </div>
 
       <div class="col-md-3">
-        <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
+        <h2> PEOPLE CHECK THEIR <br>SMARTPHONE HOURLY</h2>
+         <a [routerLink]="['app-smartphone']">
         <img
           class="img-fluid"
           src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
-        />
+        /></a>
       </div>
 
       <div class="col-md-3">
