--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -13,18 +13,19 @@
 </section>
 
 <section class="app-story-blog">
+  <div class="container">
 <div class="row">
  
-<div class="col-md-12 text-center">
-<h2>HOW TO KEEP YOUR BUSINESS RELEVANT
+<div class="col-md-12 text-center ">
+<h2 class="green-text">HOW TO KEEP YOUR BUSINESS RELEVANT<br>
   In Today's Competitive Marketplace?</h2>
-  <h3>Every business has a story to tell what's yours?</h3>
+  <h4 class="business-story">Every business has a story to tell <span class="yours-span">what's yours?</span></h4>
 
-<p>Why should you tell your Story in Your Business App? The simple answer is everyone is using
+<p>Why should you tell your Story in Your Business App? The simple answer is everyone is using<br>
   smart phones these days.</p>
-  <p>Nowadays, small business owners realize they require an optimized website with inbuilt app
+  <p>Nowadays, small business owners realize they require an optimized website with inbuilt app<br>
     marketing to keep their business “top of mind” with customers to stay relevant in today's competitive marketplace.</p>
-<p>The One App Team of app developers will create Your Business App a app designed to your 
+<p>The One App Team of app developers will create Your Business App a app designed to your <br>
   business requirement that customers will love showcasing your products and services.
 </p>
 
@@ -35,11 +36,11 @@
 
 </div>
 </div>
-
+</div><!--CONTAINER-->
 
 </section>
 
-
+<!-- 
 <section class="app-store">
 
 <div class="row">
@@ -58,7 +59,7 @@
 
 
 
-</section>
+</section> -->
 
 
 <section class="app-bstory">
@@ -77,15 +78,14 @@
 <div class="row">
  
 <div class="col-md-12 text-center">
-<h2>YOUR BUSINESS STARTS IN YOUR</h2>
-<h2>CUSTOMERS MIND</h2>
+<h2 class="black story-headline">YOUR BUSINESS STARTS IN YOUR</h2>
+<h2 class="green-story-headline">CUSTOMERS MIND</h2>
  
-<p>Create the stories you need to tell, send the alerts customers need to know
+<p>Create the stories you need to tell, send the alerts customers need to know<br>
   In Your Business App on your customers smartphone...</p>
- 
+</div>
+</div>
 
-</div>
-</div>
 
 
 <section class="app-bstory">
@@ -104,12 +104,15 @@
 <div class="row">
  
 <div class="col-md-12 text-center">
-<h2>Why A Small Business Needs</h2>
-<h2>One App Marketing?</h2>
+<h2 class="black story-headline">Why A Small Business Needs</h2>
+<h2 class="green-text">One App Marketing?</h2>
  
-<p>Think about this Idea as a small business owner what would it mean to your business right now having your logo displayed as a traveling companion in Your Business App on a customer's smartphone?</p>
- <p>Your Business App is where your online and offline business coexist through your app's functionality, asking why, who, and what your customers require.</p>
-<p>Your App provides a greater understanding what people are shopping for and how your business can serve them better, allowing your business to predict who, what and when someone is going to buy.</p>
+<p>Think about this Idea as a small business owner what would it mean to your business right now having<br>
+   your logo displayed as a traveling companion in Your Business App on a customer's smartphone?</p>
+ <p>Your Business App is where your online and offline business coexist through your app's functionality,<br>
+   asking why, who, and what your customers require.</p>
+<p>Your App provides a greater understanding what people are shopping for and how your business<br>
+   can serve them better, allowing your business to predict who, what and when someone is going to buy.</p>
 </div>
 </div>
 </section>
