--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -151,11 +151,13 @@
       </div>
 
       <div class="col-md-3">
-        <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
+     
+        <h2>APPS FOR <br>MARKETING</h2>
+        <a [routerLink]="['app-marketing']">
         <img
           class="img-fluid"
           src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
-        />
+        /></a>
       </div>
 
       <div class="col-md-3">
