--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -137,7 +137,7 @@
         <a [routerLink]="['app-story']">
         <img
           class="img-fluid"
-          src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
+          src="https://oneappwebsite.firebaseapp.com/assets/images/smiling.png"
         /></a>
       </div>
 
@@ -146,7 +146,7 @@
          <a [routerLink]="['app-smartphone']">
         <img
           class="img-fluid"
-          src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
+          src="https://oneappwebsite.firebaseapp.com/assets/images/looking.png"
         /></a>
       </div>
 
@@ -156,16 +156,17 @@
         <a [routerLink]="['app-marketing']">
         <img
           class="img-fluid"
-          src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
+          src="https://oneappwebsite.firebaseapp.com/assets/images/understanding.jpg"
         /></a>
       </div>
 
       <div class="col-md-3">
-        <h2>MOST PEOPLE CHECK THEIR SMARTPHONES</h2>
+        <h2>UNDERSTANDING<br> CUSTOMERS</h2>
+        <a [routerLink]="['app-understand']">
         <img
           class="img-fluid"
-          src="https://uploads-ssl.webflow.com/5be05a13d25a5c1149ec044c/5be06b2b86130923ee86dcca_Screen_Shot_2018-08-31_at_14.14.58.png"
-        />
+          src="https://oneappwebsite.firebaseapp.com/assets/images/creates-better.jpg"
+        /></a>
       </div>
     </div>
     <!-- row -->
