business section done

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -109,6 +109,10 @@ padding-bottom:80px;
 
 }
 
+h2.business-title{
+padding-top:15px;
+}
+
 h2.marketing-heading {
     font-size: 40px!important;
     padding-bottom:50px!important;
