--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -131,49 +131,105 @@
   <div class="container">
     <h2 class="marketing-heading">One App Tips</h2>
     <h3 class="tips-text">Puts Your Business On A Smartphone</h3>
-    <div class="row">
+    <div class="row pb-4">
       <div class="col-md-3">
-        <h2>YOUR BUSINESS <br>STORY</h2>
+        
         <a [routerLink]="['app-story']">
         <img
           class="img-fluid"
           src="https://oneappwebsite.firebaseapp.com/assets/images/smiling.png"
         /></a>
+        <h2 class="business-title">YOUR BUSINESS <br>STORY</h2>
       </div>
 
       <div class="col-md-3">
-        <h2> PEOPLE CHECK THEIR <br>SMARTPHONE HOURLY</h2>
+       
          <a [routerLink]="['app-smartphone']">
         <img
           class="img-fluid"
           src="https://oneappwebsite.firebaseapp.com/assets/images/looking.png"
         /></a>
+        <h2 class="business-title"> PEOPLE CHECK THEIR <br>SMARTPHONE HOURLY</h2>
       </div>
 
       <div class="col-md-3">
      
-        <h2>APPS FOR <br>MARKETING</h2>
+      
         <a [routerLink]="['app-marketing']">
         <img
           class="img-fluid"
           src="https://oneappwebsite.firebaseapp.com/assets/images/understanding.jpg"
         /></a>
+        <h2 class="business-title">APPS FOR <br>MARKETING</h2>
       </div>
 
       <div class="col-md-3">
-        <h2>UNDERSTANDING<br> CUSTOMERS</h2>
+       
         <a [routerLink]="['app-understand']">
         <img
           class="img-fluid"
           src="https://oneappwebsite.firebaseapp.com/assets/images/creates-better.jpg"
         /></a>
+        <h2 class="business-title">UNDERSTANDING<br> CUSTOMERS</h2>
       </div>
     </div>
     <!-- row -->
+
+    <div class="row">
+        <div class="col-md-3">
+          
+          <a [routerLink]="['app-story']">
+          <img
+            class="img-fluid"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/smiling.png"
+          /></a>
+          <h2 class="business-title">WHAT CUSTOMERS ARE<br>LOOKING FOR</h2>
+        </div>
+  
+        <div class="col-md-3">
+         
+           <a [routerLink]="['app-smartphone']">
+          <img
+            class="img-fluid"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/looking.png"
+          /></a>
+          <h2 class="business-title"> MARKET TO CUSTOMERS <br>WITHIN YOUR APP</h2>
+        </div>
+  
+        <div class="col-md-3">
+       
+          
+          <a [routerLink]="['app-marketing']">
+          <img
+            class="img-fluid"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/understanding.jpg"
+          /></a>
+          <h2 class="business-title">YOU LOGO LIVES <br>IN YOUR APP</h2>
+        </div>
+  
+        <div class="col-md-3">
+          
+          <a [routerLink]="['app-understand']">
+          <img
+            class="img-fluid"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/creates-better.jpg"
+          /></a>
+          <h2 class="business-title">YOUR BUSINESS APP<br>FOR SHOPPING</h2>
+        </div>
+      </div>
+      <!-- row -->
+    
+  <!-- marketing tips -->
+
   </div>
   <!-- container -->
 </section>
 <!-- marketing tips -->
+
+
+
+   
+    
 
 <!-- Banner add -->
 
