looking for done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -178,7 +178,7 @@
     <div class="row">
         <div class="col-md-3">
           
-          <a [routerLink]="['app-story']">
+          <a [routerLink]="['app-looking']">
           <img
             class="img-fluid"
             src="https://oneappwebsite.firebaseapp.com/assets/images/smiling.png"
