--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -188,7 +188,7 @@
   
         <div class="col-md-3">
          
-           <a [routerLink]="['app-smartphone']">
+           <a [routerLink]="['app-customers']">
           <img
             class="img-fluid"
             src="https://oneappwebsite.firebaseapp.com/assets/images/looking.png"
@@ -199,7 +199,7 @@
         <div class="col-md-3">
        
           
-          <a [routerLink]="['app-marketing']">
+          <a [routerLink]="['app-logo-lives']">
           <img
             class="img-fluid"
             src="https://oneappwebsite.firebaseapp.com/assets/images/understanding.jpg"
