--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -181,7 +181,7 @@
           <a [routerLink]="['app-looking']">
           <img
             class="img-fluid"
-            src="https://oneappwebsite.firebaseapp.com/assets/images/smiling.png"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/smiling-people.jpg"
           /></a>
           <h2 class="business-title">WHAT CUSTOMERS ARE<br>LOOKING FOR</h2>
         </div>
@@ -191,7 +191,7 @@
            <a [routerLink]="['app-customers']">
           <img
             class="img-fluid"
-            src="https://oneappwebsite.firebaseapp.com/assets/images/looking.png"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/app-group.jpg"
           /></a>
           <h2 class="business-title"> MARKET TO CUSTOMERS <br>WITHIN YOUR APP</h2>
         </div>
@@ -202,17 +202,17 @@
           <a [routerLink]="['app-logo-lives']">
           <img
             class="img-fluid"
-            src="https://oneappwebsite.firebaseapp.com/assets/images/understanding.jpg"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/push-image.jpg"
           /></a>
           <h2 class="business-title">YOU LOGO LIVES <br>IN YOUR APP</h2>
         </div>
   
         <div class="col-md-3">
           
-          <a [routerLink]="['app-understand']">
+          <a [routerLink]="['app-shop']">
           <img
             class="img-fluid"
-            src="https://oneappwebsite.firebaseapp.com/assets/images/creates-better.jpg"
+            src="https://oneappwebsite.firebaseapp.com/assets/images/fingertips.jpg"
           /></a>
           <h2 class="business-title">YOUR BUSINESS APP<br>FOR SHOPPING</h2>
         </div>
