--- a/src/app/components/logo-lives/logo-lives.component.html
+++ b/src/app/components/logo-lives/logo-lives.component.html
@@ -7,7 +7,7 @@
       <div class="col-lg-12 col-md-12">
         <img
           class="img-fluid img-marketing"
-          src="https://oneappwebsite.firebaseapp.com/assets/images/smiling-people.jpg"
+          src="https://oneappwebsite.firebaseapp.com/assets/images/your-mobile-app.jpg"
         />
   
       </div>
@@ -24,16 +24,20 @@
       <div class="row text-center">
        
       <div class="col-md-12 text-center">
-          <h2 class="story-headline">Your Business App Helps  </h2> 
-          <h2><span class="green-text">Identify What Customers Are Asking For</span></h2>
+          <h2 class="story-headline">Your Iconic Logo Lives <span class="green-text">in Your Business App.</span>  </h2> 
           
-          <p>Customers who frequently use Your <span class=" green">Business App</span> build a better understanding for what you can do for<br>
-           them, they become more dependent on your products and service.</p>  
-           
-           <p><span class=" green">Your Busines App </span>
-            Your Busines App can create messages that ensure repeated app usage as they match customers<br>
-             interest by providing and targeting customers wants and needs as you identify what your customers are asking for.</p>
-    
+          
+          <p>We at One App can provide your company an iconic logo with stunning visual design packed with app<br>
+             functionality that lives in <span class="green">Your Business App</span> on your customer smartphone 24/7.</p>
+
+
+          <p>Capturing new business, building loyalty by humanizing your brand through the conversations held with<br>
+             consumers through <span class="green">Your Business App.</span></p>
+          
+          
+          <p>Humanized conversations help consumers feel that they are important to your brand and also<br>
+           demonstrate through <span class="green">Your Business App</span> that people are important to your brand you’re invested in<br>
+            them and you know your customer.</p>
       </div>
       </div>
       </section>
@@ -44,7 +48,7 @@
             <div class="col-lg-12 col-md-12">
               <img
                 class="img-fluid"
-                src="https://oneappwebsite.firebaseapp.com/assets/images/generate.jpg"
+                src="https://oneappwebsite.firebaseapp.com/assets/images/push-image.jpg"
               />
         
             </div>
@@ -56,18 +60,11 @@
             <div class="row text-center">
              
             <div class="col-md-12 text-center">
-                <h2 class="story-headline">Personalize Your Marketing to Consumers  </h2> 
-              <h2><span class="green-text"> Within Your Business App</span></h2>
-                
-              <p>Personalized messaging is about being relevant to the consumers through persuasion.</p>
-
-
-    <p>Today's empowered consumers do not want or wish to be sold to as they have a great choice of where to<br>
-       buy goods and services both online and offline.</p>
-                  
-                  
-       <p><span class="green">Your Business App</span> gives your brand the media presents a business requires on Social Media where<br>
-                   consumers are sharing their thoughts and feelings about your brand.</p>
+                <h2 class="story-headline">Using Push Promotion Encourages </h2> 
+              <h2><span class="green-text">Repeat Visits To Your Business App.</span></h2>
+              <p>As people view your special offers/announcements on their smartphones<br>
+              Your Business App increases customer's engagement improving repeat visits to your business location<br>
+               through the use of push promotions to customers smartphones.</p>
           
           
             </div>
@@ -80,7 +77,7 @@
                   <div class="col-lg-12 col-md-12">
                     <img
                       class="img-fluid"
-                      src="https://oneappwebsite.firebaseapp.com/assets/images/trends.jpg"
+                      src="https://oneappwebsite.firebaseapp.com/assets/images/flash-deal.jpg"
                     />
               
                   </div>
@@ -92,17 +89,10 @@
                   <div class="row text-center">
                    
                   <div class="col-md-12 text-center">
-                      <h2 class="story-headline">Personalized <span class="green-text">Marketing </span> </h2> 
-                      <p class="green">"Allows your business to remarket to your customers enticing them to do business with your company<br>
-                         anyplace or anytime through your business app"...</p>
-                    
-                         <p>As a business owner you can learn about what your customers wants and needs are building your<br>
-                           customer profiles through knowledge acquired through Your <span class="green">Business App</span> enables you as a business owner<br>
-                            to gain insights into what your customers needs are their buying habits and creating you own metadata about your customers.</p>
-
-
-                         <p>Once you understand what your customers are doing what they are looking for in their shopping habits<br>
-                          you can then tailor your special offers, coupons or make announcements to them through personalized messages in your app.</p>
+                      <h2 class="story-headline">Your Great Deals Appear 24/7 </h2> 
+                      <span class="green-text">On A Customers Smartphone. </span>
+                      <p><span class="green">Your Business App</span> is suitable for all business types who would like to engage with customers<br>
+                          by sending information, special offers, coupons, straight to their customer smartphone.</p>
                      
                 
                 
